--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
               <!-- Main image-->
 
-              <img src="./img/Banner1.gif"  alt="" data-bgposition="center center" data-bgrepeat="no-repeat" class="rev-slidebg" data-bgparallax="7">
+              <img src="img/Banner1.jpg"  alt="" data-bgposition="center center" data-bgrepeat="no-repeat" class="rev-slidebg" data-bgparallax="7">
 
               <!-- Layer 1 -->
 
@@ -238,7 +238,7 @@
 
               <!-- Main image-->
 
-              <img src="img/Banner2.gif"  alt="" data-bgposition="center center" data-bgrepeat="no-repeat" class="rev-slidebg" data-bgparallax="7">
+              <img src="img/Banner2.jpg"  alt="" data-bgposition="center center" data-bgrepeat="no-repeat" class="rev-slidebg" data-bgparallax="7">
 
               <!-- Layer 1 -->
 
